--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dart_code_metrics_presets: ^2.24.0
   image_picker: ^1.1.2
   path_provider: ^2.1.5
+  provider: ^6.1.5
 
 
 dev_dependencies:
